Fixed guest box on mobile

--- a/resources/less/forum.less
+++ b/resources/less/forum.less
@@ -127,9 +127,12 @@
     display: none;
   }
 }
-
+.TagsPage-nav{
+  .containerwbguest{
+    display: none;
+  }
+}
 @media screen and (max-width: 1026px) {
-
   .item-welcomeBox{
     display: none;
   }
